# mt5docker

./: README.md  pyproject.toml
mt5docker/: __init__.py  __main__.py
tests/: test_01.py
